--- a/Bootstrap-Inter-Bootcamp/index.html
+++ b/Bootstrap-Inter-Bootcamp/index.html
@@ -7,26 +7,76 @@
         <link rel="stylesheet" type="text/css" href="css/Style.css"
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#">
                 <img src="img/globallabs.png" width="220" height="80">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link "href="a">Quem Somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="a">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="a">Serviços</a>
+                        <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
                 </ul>
             </div>
         </nav>
         </nav>
 
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3 class="margin"> Quem somos</h3>
+                <img src="img/time.jpeg" class="rounded-circle" width="400" height="400">
+                <h3>Somos um time comprometido com os resultados</h3>
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <div class="container-fluid parceiros text-center margin">
+                <h3 class="margin"> Parceiros </h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/DIO.png" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/DIO.png" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/DIO.png" width="100%">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h3 class="margin"> Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h3>Teste nossos serviços na WEB</h3>
+                            <img src="img/site1.jpeg" width="100%" height="295">
+                        </div>
+                        <div class="col-lg-6">
+                            <h3>Teste nossos serviços no App</h3>
+                            <img src="img/app.jpeg" width="100%" height="295">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+           </section>
+
+           <footer class="container-fluid text-center bg-footer margin">
+               <p>Desenvolvido por Windsor Oliveira</p>
+           </footer>
 
     </body>
 </html>
