--- a/Bootstrap-Inter-Bootcamp/index.html
+++ b/Bootstrap-Inter-Bootcamp/index.html
@@ -4,7 +4,7 @@
         <title>Minha Página</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/Style.css"
+        <link rel="stylesheet" type="text/css" href="css/Style.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light margin">
